[package]
name = "c9s"
version = "0.1.11"
edition = "2021"
description = "A k9s-inspired TUI for managing Claude Code sessions"
license = "MIT"
repository = "https://github.com/waxb/c9s"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
libc = "0.2"
notify = "7"
ratatui = "0.30"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
vt100 = "0.16"

[profile.release]
lto = true
strip = true
codegen-units = 1
